--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-tensorflow_gpu==1.6.0
-tqdm==4.11.2
-numpy==1.14.1
-scipy==0.18.1
-Pillow==4.3.0
+tensorflow==2.13.1
+tqdm
+numpy==1.24.3
+scipy==1.0.0
+Pillow
+imageio==2.34.0
